use active support deprecations to print deprecation warnings about slave->replica

--- a/.github/term-check.yml
+++ b/.github/term-check.yml
@@ -5,3 +5,4 @@ ignore:
   - lib/active_record_shards/model.rb
   - lib/active_record_shards/shard_selection.rb
   - lib/active_record_shards/tasks.rb
+  - lib/active_record_shards.rb
